--- a/nginx/sites/grafana.conf
+++ b/nginx/sites/grafana.conf
@@ -1,19 +1,77 @@
-server {
-  listen 8070 default_server;
-  listen [::]:8070 default_server;
+upstream grafana_backend {
+  server host.docker.internal:8072;
+}
 
+server {
+  listen 80;
+  server_name grafana.starbase80.dev;
+
+  access_log /var/log/nginx/grafana.starbase80.dev.access.logs;
+  error_log /var/log/nginx/grafana.starbase80.dev.error.logs;
+  
   root /var/www/html;
   index index.html index.htm index.nginx-debian.html;
 
-  server_name _;
-
-  location / {
-    try_files $uri $uri/ =404;
+  location ^~ /.well-known/acme-challenge {
+    allow all;
+    root /var/www/certbot;
   }
 
   location /status {
     stub_status;
     allow 10.10.10.20;
     deny all;
+  }
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+
+    # proxy_pass http://grafana_backend;
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name grafana.starbase80.dev;
+
+  access_log /var/log/nginx/grafana.starbase80.dev.access.logs;
+  error_log /var/log/nginx/grafana.starbase80.dev.error.logs;
+  
+  root /var/www/html;
+  index index.html index.htm index.nginx-debian.html;
+
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off;
+
+  ssl_certificate /etc/letsencrypt/live/grafana.starbase80.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/grafana.starbase80.dev/privkey.pem;
+
+  include /etc/nginx/snippets/authelia-location.conf;
+
+  location ^~ /.well-known/acme-challenge {
+    allow all;
+    root /var/www/certbot;
+  }
+
+  location /status {
+    stub_status;
+    allow 10.10.10.20;
+    deny all;
+  }
+
+  location / {
+    include /etc/nginx/snippets/proxy.conf;
+    include /etc/nginx/snippets/authelia-authrequest.conf;
+
+    proxy_pass http://grafana_backend;
   }
 }
