--- a/nginx/snippets/proxy.conf
+++ b/nginx/snippets/proxy.conf
@@ -25,8 +25,10 @@ proxy_buffers 64 256k;
 # set_real_ip_from 172.16.0.0/12;
 # set_real_ip_from 192.168.0.0/16;
 # set_real_ip_from fc00::/7;
-set_real_ip_from 10.10.10.1;
-set_real_ip_from 10.10.10.20;
+set_real_ip_from 10.0.0.0/8;
+set_real_ip_from 172.16.0.0/12;
+set_real_ip_from 192.168.0.0/16;
+set_real_ip_from fc00::/7;
 real_ip_header X-Forwarded-For;
 real_ip_recursive on;
 
