--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -24,6 +24,9 @@ services:
       - ./env.authelia_configuration.yml:/config/configuration.yml
       - ./env.authelia_users_database.yml:/config/users_database.yml
       - authelia_logs:/logs
+    networks:
+      outside:
+        aliases: []
 
   redis:
     image: redis:alpine
@@ -38,6 +41,9 @@ services:
     command: redis-server --appendonly yes
     volumes:
       - authelia_redis:/data
+    networks:
+      outside:
+        aliases: []
 
   nginx:
     image: linuxserver/nginx
@@ -53,6 +59,9 @@ services:
       - 443:443
       - 8070:8070 # for prometheus
     restart: always
+    networks:
+      outside:
+        aliases: []
 
   # Get one certificate
   # letsencrypt_one:
@@ -71,18 +80,21 @@ services:
 
   # Renew certificates
   letsencrypt:
-      image: certbot/certbot:v2.4.0
-      container_name: switchboard_letsencrypt
-      entrypoint: ""
-      command: >
-        sh -c "certbot renew --keep-until-expiring -n -v"
-      depends_on:
-          - nginx
-      volumes:
-          - letsencrypt:/etc/letsencrypt
-          - certbot:/var/www/certbot
-      environment:
-          - TERM=xterm
+    image: certbot/certbot:v2.4.0
+    container_name: switchboard_letsencrypt
+    entrypoint: ""
+    command: >
+      sh -c "certbot renew --keep-until-expiring -n -v"
+    depends_on:
+        - nginx
+    volumes:
+        - letsencrypt:/etc/letsencrypt
+        - certbot:/var/www/certbot
+    environment:
+        - TERM=xterm
+    networks:
+      outside:
+        aliases: []
 
   # nginx-prometheus-exporter:
   #   image: nginx/nginx-prometheus-exporter:0.11
@@ -189,3 +201,7 @@ volumes:
   prometheus:
   authelia_redis:
   authelia_logs:
+
+networks:
+  outside:
+    driver: bridge
