--- a/nginx/sites/n8n.conf
+++ b/nginx/sites/n8n.conf
@@ -1,7 +1,3 @@
-upstream n8n_backend {
-  server host.docker.internal:8140;
-}
-
 server {
   listen 80;
   server_name n8n.starbase80.dev;
@@ -15,13 +11,6 @@ server {
   }
 
   location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
-
-    # proxy_pass http://n8n_backend;
     return 301 https://$host$request_uri;
   }
 }
@@ -50,10 +39,12 @@ server {
     root /var/www/certbot;
   }
 
+  set $upstream http://host.docker.internal:8140;
+
   location / {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
 
-    proxy_pass http://n8n_backend;
+    proxy_pass $upstream;
   }
 }
