--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name auth.starbase80.dev;
 
     access_log /var/log/nginx/auth.starbase80.dev.access.logs;
@@ -18,6 +19,7 @@ server {
 
 server {
     listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name auth.*;
 
     access_log /var/log/nginx/auth.starbase80.dev.access.logs;
