--- a/nginx/sites/n8n.conf
+++ b/nginx/sites/n8n.conf
@@ -39,7 +39,7 @@ server {
     root /var/www/certbot;
   }
 
-  set $upstream http://host.docker.internal:8140;
+  set $upstream http://localhost:8140;
 
   location / {
     include /etc/nginx/snippets/proxy.conf;
