--- a/metube/compose.yml
+++ b/metube/compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - 8080:8081
     volumes:
-      - ./downloads:/downloads
-      - ./env.cookies:/cookies/cookies.txt
+      - /mnt/synology/video/YouTube:/downloads
+      # - ./env.cookies:/cookies/cookies.txt
