--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -5,12 +5,8 @@ services:
     entrypoint: "tail -f /dev/null"
     restart: always
     volumes:
-      - certbot:/var/www/certbot:ro
-      - grafana:/var/lib/grafana:ro
       - letsencrypt:/etc/letsencrypt:ro
       - logs:/var/log/nginx:ro
-      - loki:/loki:ro
-      - prometheus:/prometheus:ro
 
   authelia:
     image: authelia/authelia:4.37.5
@@ -23,7 +19,10 @@ services:
     volumes:
       - ./env.authelia_configuration.yml:/config/configuration.yml
       - ./env.authelia_users_database.yml:/config/users_database.yml
+      - ./env.authelia_notification.txt:/config/notification.txt
       - authelia_logs:/logs
+    networks:
+      - net
 
   redis:
     image: redis:alpine
@@ -38,6 +37,8 @@ services:
     command: redis-server --appendonly yes
     volumes:
       - authelia_redis:/data
+    networks:
+      - net
 
   nginx:
     image: linuxserver/nginx
@@ -53,6 +54,11 @@ services:
       - 443:443
       - 8070:8070 # for prometheus
     restart: always
+    networks:
+      - net
+      - archivebox_default
+      - gitea_default
+      - miniflux_default
 
   # Get one certificate
   # letsencrypt_one:
@@ -84,108 +90,19 @@ services:
     environment:
         - TERM=xterm
 
-  # nginx-prometheus-exporter:
-  #   image: nginx/nginx-prometheus-exporter:0.11
-  #   container_name: switchboard_status_exporter
-  #   ports:
-  #     - 8071:9113
-  #   command:
-  #     - -nginx.scrape-uri
-  #     - http://10.10.10.10:8070/status
-  #     - -web.telemetry-path=/metrics
-  #   depends_on:
-  #     - nginx
-  #   restart: always
-  #   networks:
-  #     monitoring:
-  #       ipv4_address: 10.10.10.20
-  #       aliases:
-  #         - exporter
-
-  # prometheus:
-  #   image: prom/prometheus:v2.43.0
-  #   container_name: switchboard_prometheus
-  #   expose:
-  #     - 9090
-  #   depends_on:
-  #     - nginx-prometheus-exporter
-  #   restart: always
-  #   volumes:
-  #     - ./prometheus.yml:/etc/prometheus/prometheus.yml
-  #     - prometheus:/prometheus
-  #   command:
-  #     - '--config.file=/etc/prometheus/prometheus.yml'
-  #     - '--storage.tsdb.path=/prometheus'
-  #     - '--web.console.libraries=/etc/prometheus/console_libraries'
-  #     - '--web.console.templates=/etc/prometheus/consoles'
-  #     - '--web.enable-lifecycle'
-  #   networks:
-  #     monitoring:
-  #       ipv4_address: 10.10.10.30
-  #       aliases:
-  #         - prometheus
-
-  # grafana:
-  #   image: grafana/grafana-oss:9.4.7
-  #   container_name: switchboard_grafana
-  #   ports:
-  #     - 8072:3000
-  #   depends_on:
-  #     - prometheus
-  #     - loki
-  #   restart: always
-  #   volumes:
-  #     - ./grafana.ini:/etc/grafana/grafana.ini
-  #     - ./loki-data-source.yml:/etc/grafana/provisioning/datasources/loki.yml
-  #     - grafana:/var/lib/grafana
-  #   networks:
-  #     monitoring:
-  #       ipv4_address: 10.10.10.40
-  #       aliases:
-  #         - grafana
-
-  # loki:
-  #   image: grafana/loki:main-1c012d6
-  #   container_name: switchboard_loki
-  #   ports:
-  #     - 3100
-  #   volumes:
-  #     - loki:/loki
-  #     - ./loki-config.yml:/etc/loki/local-config.yml
-  #   command: 
-  #     - '-config.file=/etc/loki/local-config.yml'
-  #   depends_on:
-  #     - nginx
-  #   restart: always
-  #   networks:
-  #     monitoring:
-  #       ipv4_address: 10.10.10.50
-  #       aliases:
-  #         - loki
-
-  # promtail:
-    # image: grafana/promtail:main-1c012d6
-    # container_name: switchboard_promtail
-    # volumes:
-    #   - ./promtail.yml:/etc/promtail/promtail.yml
-    #   - logs:/var/log/nginx
-    # command:
-    #   - '-config.file=/etc/promtail/promtail.yml'
-    # depends_on:
-    #   - loki
-    # restart: always
-    # networks:
-    #   monitoring:
-    #     ipv4_address: 10.10.10.60
-    #     aliases:
-    #       - promtail
-
 volumes:
   certbot:
-  grafana:
   letsencrypt:
   logs:
-  loki:
-  prometheus:
-  authelia_redis:
   authelia_logs:
+  authelia_redis:
+
+networks:
+  net:
+    external: true
+  archivebox_default:
+    external: true
+  gitea_default:
+    external: true
+  miniflux_default:
+    external: true
