--- a/nginx/sites/mastodon.conf
+++ b/nginx/sites/mastodon.conf
@@ -4,11 +4,11 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream mastodon_backend {
-  server host.docker.internal:8012 fail_timeout=0;
+  server localhost:8012 fail_timeout=0;
 }
 
 upstream mastodon_streaming {
-  server host.docker.internal:8013 fail_timeout=0;
+  server localhost:8013 fail_timeout=0;
 }
 
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
