--- a/mealie/compose.yml
+++ b/mealie/compose.yml
@@ -11,8 +11,8 @@ services:
     container_name: mealie
     image: hkotel/mealie:latest
     restart: always
-    ports:
-      - 8110:80
+    expose:
+      - 80
     environment:
       PUID: 1000
       PGID: 1000
