--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   portainer:
     image: portainer/portainer
@@ -7,8 +6,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - data:/data
-    ports:
-      - "8160:9000"
+    expose:
+      - 9000
 
 volumes:
   data:
