--- a/vaultwarden/compose.yml
+++ b/vaultwarden/compose.yml
@@ -11,8 +11,8 @@ services:
     image: vaultwarden/server:1.28.0
     container_name: vaultwarden
     restart: always
-    ports:
-      - 8130:80
+    expose:
+      - 80
     volumes:
       - data:/data
     env_file: env.server
