--- a/jellyfin/compose.yml
+++ b/jellyfin/compose.yml
@@ -2,8 +2,9 @@ services:
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
-    user: uid:gid
-    network_mode: "host"
+    user: 1000:1000
+    expose:
+      - 8096
     volumes:
       - config:/config
       - cache:/cache
@@ -15,8 +16,8 @@ services:
     environment:
       - JELLYFIN_PublishedServerUrl=https://jellyfin.starbase80.dev
     # Optional - may be necessary for docker healthcheck to pass if running in host network mode
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    # extra_hosts:
+    #  - "host.docker.internal:host-gateway"
 
 volumes:
   cache:
