--- a/mastodon/compose.yml
+++ b/mastodon/compose.yml
@@ -56,6 +56,8 @@ services:
       - redis
     volumes:
       - web:/mastodon/public/system
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   streaming:
     image: tootsuite/mastodon:v4.1.2
@@ -78,6 +80,8 @@ services:
     depends_on:
       - db
       - redis
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   sidekiq:
     image: tootsuite/mastodon:v4.1.2
