--- a/archivebox/compose.yml
+++ b/archivebox/compose.yml
@@ -11,8 +11,8 @@ services:
     image: archivebox/archivebox:sha-829e377
     container_name: archivebox
     command: server --quick-init 0.0.0.0:8000
-    expose:
-        - 8000
+    ports:
+        - 8020:8000
     environment:
         - ALLOWED_HOSTS=*
         - MEDIA_MAX_SIZE=750m
