--- a/jellyfin/compose.yml
+++ b/jellyfin/compose.yml
@@ -3,8 +3,8 @@ services:
     image: jellyfin/jellyfin
     container_name: jellyfin
     user: 1000:1000
-    expose:
-      - 8096
+    ports:
+      - 8030:8096
     volumes:
       - config:/config
       - cache:/cache
