--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -6,8 +6,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - data:/data
-    expose:
-      - 9000
+    ports:
+      - 8160:9000
 
 volumes:
   data:
