Trying fixed IP addresses

--- a/nginx/sites/homepage.conf
+++ b/nginx/sites/homepage.conf
@@ -1,3 +1,7 @@
+upstream homepage_backend {
+  server 192.168.1.3:8090;
+}
+
 server {
   listen 80;
   server_name starbase80.dev www.starbase80.dev;
@@ -44,12 +48,10 @@ server {
     root /var/www/certbot;
   }
 
-  set $upstream http://homepage:3000;
-
   location / {
-    proxy_pass $upstream;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
+    proxy_pass http://homepage_backend;
   }
 }
