--- a/nginx/sites/n8n.conf
+++ b/nginx/sites/n8n.conf
@@ -1,3 +1,7 @@
+upstream n8n_backend {
+  server 192.168.1.3:8140;
+}
+
 server {
   listen 80;
   server_name n8n.starbase80.dev;
@@ -39,12 +43,10 @@ server {
     root /var/www/certbot;
   }
 
-  set $upstream http://localhost:8140;
-
   location / {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
 
-    proxy_pass $upstream;
+    proxy_pass $n8n_backend;
   }
 }
