--- a/nginx/sites/n8n.conf
+++ b/nginx/sites/n8n.conf
@@ -47,6 +47,6 @@ server {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
 
-    proxy_pass $n8n_backend;
+    proxy_pass http://n8n_backend;
   }
 }
