Yep, local IP was the answer MeTube and Woodpecker are broken

--- a/gitea/compose.yml
+++ b/gitea/compose.yml
@@ -51,7 +51,7 @@ services:
     depends_on:
       - woodpecker-server
     volumes:
-      - //var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
 
 volumes:
   db:
