--- a/metube/compose.yml
+++ b/metube/compose.yml
@@ -4,7 +4,8 @@ services:
     container_name: metube
     restart: always
     environment:
-      - YTDL_OPTIONS={"format":"bestvideo[ext=mp4]+bestaudio[ext=m4a]/mp4","cookiefile":"/cookies/cookies.txt"}
+      # - YTDL_OPTIONS={"format":"bestvideo[ext=mp4]+bestaudio[ext=m4a]/mp4","cookiefile":"/cookies/cookies.txt"}
+      - YTDL_OPTIONS={"format":"bestvideo[ext=mp4]+bestaudio[ext=m4a]/mp4"}
     ports:
       - 8080:8081
     volumes:
