--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -34,7 +34,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/auth.starbase80.dev/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/auth.starbase80.dev/privkey.pem;
 
-    set $upstream http://authelia:9091;
+    set $upstream http://192.168.1.3:9091;
 
     location ^~ /.well-known/acme-challenge/ {
         allow all;
