Fixed MeTube Added SSL cert for Portainer

--- a/nginx/sites/metube.conf
+++ b/nginx/sites/metube.conf
@@ -53,6 +53,8 @@ server {
   location / {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
 
     proxy_pass http://metube_backend;
   }
