--- a/calibre/compose.yml
+++ b/calibre/compose.yml
@@ -1,6 +1,14 @@
 services:
+  backup:
+    image: alpine:3.17.2
+    container_name: calibre_backup
+    entrypoint: "tail -f /dev/null"
+    volumes:
+      - config:/config
+    restart: always
+
   calibre:
-    image: lscr.io/linuxserver/calibre-web:latest
+    image: linuxserver/calibre-web:0.6.20
     container_name: calibre
     environment:
       - PUID=1000
