--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -60,7 +60,7 @@ services:
   #   container_name: switchboard_letsencrypt_one
   #   entrypoint: ""
   #   command: >
-  #     sh -c "certbot certonly --reinstall -n -v -d portainer.starbase80.dev --cert-name portainer.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #     sh -c "certbot certonly --reinstall -n -v -d jellyfin.starbase80.dev --cert-name jellyfin.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
   #   depends_on:
   #     - nginx
   #   volumes:
