--- a/gitea/compose.yml
+++ b/gitea/compose.yml
@@ -36,9 +36,8 @@ services:
     env_file: env.woodpecker
     depends_on:
       - gitea
-    expose:
+    ports:
       - 8101:8000
-      - 8102:9000
     volumes:
       - woodpecker:/var/lib/woodpecker
 
