--- a/nginx/sample.env.authelia_configuration.yml
+++ b/nginx/sample.env.authelia_configuration.yml
@@ -14,28 +14,15 @@ log:
 
 theme: light
 
-jwt_secret: SAMPLE_SECRET
-default_redirection_url: https://auth.notclickable.com
+jwt_secret: SECRET
+default_redirection_url: https://auth.starbase80.dev
 
 totp:
-  disable: false
   issuer: authelia.com
-  algorithm: sha1
-  digits: 6
-  period: 30
-  skew: 1
-  secret_size: 32
 
 authentication_backend:
-  refresh_interval: 5m
   file:
     path: /config/users_database.yml
-    password:
-      algorithm: argon2id
-      iterations: 1
-      salt_length: 16
-      parallelism: 8
-      memory: 64
       
 access_control:
   default_policy: deny
@@ -43,24 +30,42 @@ access_control:
   - name: internal
     networks:
     - 192.168.1.0/24
-    - 10.0.3.2/24
   rules:
-    #- domain: "*.mydomain.work"
-    #  policy: bypass
-    #  networks:
-    #    - internal
-    - domain: "*.notclickable.com"
+    - domain: "*.starbase80.dev"
+      policy: bypass
+      networks:
+        - internal
+    - domain: "*.starbase80.dev"
+      policy: bypass
+      resources:
+      - '^/favicon.ico$'
+      - '^/apple-touch-icon.png$'
+      - '^/apple-touch-icon-precomposed.png$'
+    - domain: metube.starbase80.dev
+      policy: bypass
+      resources:
+      - '^/favicon/.*$'
+    - domain: jellyfin.starbase80.dev
+      policy: bypass
+      resources:
+      - '^/web/.*$'
+    - domain: miniflux.starbase80.dev
+      policy: bypass
+      resources:
+      - '^/accounts/ClientLogin$'
+      - '^/reader/api.*$'
+    - domain: "*.starbase80.dev"
       policy: one_factor
 
 session:
   name: authelia_session
-  secret: SAMPLE_SECRET
+  secret: SECRET
   expiration: 30d  # 1 h
   inactivity: 5d  # 5 day
-  domain: notclickable.com  # Should match whatever your root protected domain is
+  domain: starbase80.dev  # Should match whatever your root protected domain is
   remember_me_duration:  30d
   redis:
-    host: redis
+    host: localhost
     port: 6379
 
 regulation:
@@ -69,7 +74,7 @@ regulation:
   ban_time: 300m
 
 storage:
-  encryption_key: SAMPLE_SECRET
+  encryption_key: SECRET
   local:
     path: /config/db.sqlite3
 
