--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -59,7 +59,7 @@ services:
   #   container_name: switchboard_letsencrypt_one
   #   entrypoint: ""
   #   command: >
-  #     sh -c "certbot certonly --reinstall -n -v -d jellyfin.starbase80.dev --cert-name jellyfin.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #     sh -c "certbot certonly --reinstall -n -v -d roherwiki.starbase80.dev --cert-name roherwiki.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
   #   depends_on:
   #     - nginx
   #   volumes:
@@ -69,19 +69,19 @@ services:
   #     - TERM=xterm
 
   # Renew certificates
-  letsencrypt:
-    image: certbot/certbot:v2.4.0
-    container_name: switchboard_letsencrypt
-    entrypoint: ""
-    command: >
-      sh -c "certbot renew --keep-until-expiring -n -v"
-    depends_on:
-        - nginx
-    volumes:
-        - letsencrypt:/etc/letsencrypt
-        - certbot:/var/www/certbot
-    environment:
-        - TERM=xterm
+  # letsencrypt:
+  #   image: certbot/certbot:v2.4.0
+  #   container_name: switchboard_letsencrypt
+  #   entrypoint: ""
+  #   command: >
+  #     sh -c "certbot renew --keep-until-expiring -n -v"
+  #   depends_on:
+  #       - nginx
+  #   volumes:
+  #       - letsencrypt:/etc/letsencrypt
+  #       - certbot:/var/www/certbot
+  #   environment:
+  #       - TERM=xterm
 
 volumes:
   certbot:
