--- a/wallabag/compose.yml
+++ b/wallabag/compose.yml
@@ -1,4 +1,13 @@
 services:
+  backup:
+    image: alpine:3.17.2
+    container_name: wallabag_backup
+    entrypoint: "tail -f /dev/null"
+    restart: always
+    volumes:
+      - images:/var/www/wallabag/web/assets/images:ro
+      - data:/var/lib/mysql:ro
+
   wallabag:
     image: wallabag/wallabag
     container_name: wallabag
