Docker images for Let's Encrypt forever

--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -49,6 +49,21 @@ services:
     restart: always
     network_mode: host
 
+  # Get one certificate
+  # letsencrypt_one:
+  #   image: certbot/certbot:v2.4.0
+  #   container_name: switchboard_letsencrypt_one
+  #   entrypoint: ""
+  #   command: >
+  #     sh -c "certbot certonly --reinstall -n -v -d wallabag.starbase80.dev --cert-name wallabag.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #   depends_on:
+  #     - nginx
+  #   volumes:
+  #     - letsencrypt:/etc/letsencrypt
+  #     - certbot:/var/www/certbot
+  #   environment:
+  #     - TERM=xterm
+
   # Renew certificates
   # letsencrypt:
   #   image: certbot/certbot:v2.4.0
