--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -65,19 +65,19 @@ services:
   #     - TERM=xterm
 
   # Renew certificates
-  # letsencrypt:
-  #   image: certbot/certbot:v2.4.0
-  #   container_name: switchboard_letsencrypt
-  #   entrypoint: ""
-  #   command: >
-  #     sh -c "certbot renew --keep-until-expiring -n -v"
-  #   depends_on:
-  #       - nginx
-  #   volumes:
-  #       - letsencrypt:/etc/letsencrypt
-  #       - certbot:/var/www/certbot
-  #   environment:
-  #       - TERM=xterm
+  letsencrypt:
+    image: certbot/certbot:v2.4.0
+    container_name: switchboard_letsencrypt
+    entrypoint: ""
+    command: >
+      sh -c "certbot renew --keep-until-expiring -n -v"
+    depends_on:
+        - nginx
+    volumes:
+        - letsencrypt:/etc/letsencrypt
+        - certbot:/var/www/certbot
+    environment:
+        - TERM=xterm
 
 volumes:
   certbot:
