--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -55,7 +55,7 @@ services:
     container_name: switchboard_letsencrypt_one
     entrypoint: ""
     command: >
-      sh -c "certbot certonly --reinstall -n -v -d standardnotes.starbase80.dev --cert-name standardnotes.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+      sh -c "certbot certonly --reinstall -n -v -d standardnotesserver.starbase80.dev --cert-name standardnotesserver.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
     depends_on:
       - nginx
     volumes:
