--- a/nginx/sites/standardnotesfiles.conf
+++ b/nginx/sites/standardnotesfiles.conf
@@ -21,39 +21,39 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
 
-    proxy_pass http://standardnotesfiles_backend;
-    # return 301 https://$host$request_uri;
+    # proxy_pass http://standardnotesfiles_backend;
+    return 301 https://$host$request_uri;
   }
 }
 
-# server {
-#   listen 443 ssl http2;
-#   listen [::]:443 ssl http2;
-#   server_name standardnotesfiles.starbase80.dev;
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name standardnotesfiles.starbase80.dev;
 
-#   access_log /var/log/nginx/standardnotesfiles.starbase80.dev.access.logs;
-#   error_log /var/log/nginx/standardnotesfiles.starbase80.dev.error.logs;
+  access_log /var/log/nginx/standardnotesfiles.starbase80.dev.access.logs;
+  error_log /var/log/nginx/standardnotesfiles.starbase80.dev.error.logs;
 
-#   ssl_protocols TLSv1.2 TLSv1.3;
-#   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-#   ssl_prefer_server_ciphers on;
-#   ssl_session_cache shared:SSL:10m;
-#   ssl_session_tickets off;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off;
 
-#   ssl_certificate /etc/letsencrypt/live/standardnotesfiles.starbase80.dev/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/standardnotesfiles.starbase80.dev/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/standardnotesfiles.starbase80.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/standardnotesfiles.starbase80.dev/privkey.pem;
 
-#   include /etc/nginx/snippets/authelia-location.conf;
+  include /etc/nginx/snippets/authelia-location.conf;
 
-#   location ^~ /.well-known/acme-challenge {
-#     allow all;
-#     root /var/www/certbot;
-#   }
+  location ^~ /.well-known/acme-challenge {
+    allow all;
+    root /var/www/certbot;
+  }
 
-#   location / {
-#     include /etc/nginx/snippets/proxy.conf;
-#     include /etc/nginx/snippets/authelia-authrequest.conf;
+  location / {
+    include /etc/nginx/snippets/proxy.conf;
+    include /etc/nginx/snippets/authelia-authrequest.conf;
 
-#     proxy_pass http://standardnotesfiles_backend;
-#   }
-# }
+    proxy_pass http://standardnotesfiles_backend;
+  }
+}
