Proxy cache off for files?

--- a/nginx/sites/standardnotesfiles.conf
+++ b/nginx/sites/standardnotesfiles.conf
@@ -54,6 +54,8 @@ server {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
 
+    proxy_cache off;
+
     proxy_pass http://standardnotesfiles_backend;
   }
 }
