--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -1,7 +1,12 @@
 services:
   homepage:
-    image: jordanroher/sb80:1
+    image: sb80:1.2
     container_name: homepage
     ports:
       - 8090:4173
     restart: always
+    volumes:
+        - ./config.json:/app/src/config.json
+        - ./public/favicon.ico:/app/public/favicon.ico
+        - ./public/logo.png:/app/public/logo.png
+        - ./public/icons:/app/public/icons
