Added twins icon

--- a/homepage/config.json
+++ b/homepage/config.json
@@ -72,7 +72,7 @@
 				"name": "Roher Twins",
 				"uri": "https://rohertwins.starbase80.dev",
 				"description": "Weekly newsletter",
-				"icon": "/icons/ghost.jpg"
+				"icon": "/icons/rohertwins.jpg"
 			},
 			{
 				"name": "Roher Wiki",
