--- a/standardnotes/compose.yml
+++ b/standardnotes/compose.yml
@@ -15,6 +15,7 @@ services:
     image: standardnotes/web:stable
     env_file: env.web
     container_name: standardnotes_web
+    restart: always
     ports:
       - 8190:3001
 
@@ -22,6 +23,7 @@ services:
     image: standardnotes/server
     env_file: env.server
     container_name: standardnotes_server
+    restart: always
     ports:
       - 8191:3000
       - 8192:3104
@@ -34,7 +36,7 @@ services:
     container_name: standardnotes_localstack
     expose:
       - 4566
-    restart: unless-stopped
+    restart: always
     environment:
       - SERVICES=sns,sqs
       - HOSTNAME_EXTERNAL=localstack
@@ -48,7 +50,7 @@ services:
     env_file: env.db
     expose:
       - 3306
-    restart: unless-stopped
+    restart: always
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
     volumes:
       - mysql:/var/lib/mysql
@@ -61,7 +63,7 @@ services:
       - redis:/data
     expose:
       - 6379
-    restart: unless-stopped
+    restart: always
 
 volumes:
   logs:
