--- a/wallabag/compose.yml
+++ b/wallabag/compose.yml
@@ -12,6 +12,7 @@ services:
     image: wallabag/wallabag
     container_name: wallabag
     env_file: env.wallabag
+    restart: always
     ports:
       - 8180:80
     volumes:
@@ -28,6 +29,7 @@ services:
     image: mariadb
     container_name: wallabag_db
     env_file: env.db
+    restart: always
     volumes:
       - data:/var/lib/mysql
     healthcheck:
@@ -38,6 +40,7 @@ services:
   redis:
     image: redis:alpine
     container_name: wallabag_redis
+    restart: always
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 20s
