--- a/nginx/sites/drawio.conf
+++ b/nginx/sites/drawio.conf
@@ -1,13 +1,13 @@
-upstream drawio_backend {
+upstream draw_backend {
   server 192.168.1.3:8220;
 }
 
 server {
   listen 80;
-  server_name drawio.starbase80.dev;
+  server_name draw.starbase80.dev;
 
-  access_log /var/log/nginx/drawio.starbase80.dev.access.logs;
-  error_log /var/log/nginx/drawio.starbase80.dev.error.logs;
+  access_log /var/log/nginx/draw.starbase80.dev.access.logs;
+  error_log /var/log/nginx/draw.starbase80.dev.error.logs;
 
   location ^~ /.well-known/acme-challenge {
     allow all;
@@ -21,7 +21,7 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
 
-    proxy_pass http://drawio_backend;
+    proxy_pass http://draw_backend;
     # return 301 https://$host$request_uri;
   }
 }
@@ -29,10 +29,10 @@ server {
 # server {
 #   listen 443 ssl http2;
 #   listen [::]:443 ssl http2;
-#   server_name drawio.starbase80.dev;
+#   server_name draw.starbase80.dev;
 
-#   access_log /var/log/nginx/drawio.starbase80.dev.access.logs;
-#   error_log /var/log/nginx/drawio.starbase80.dev.error.logs;
+#   access_log /var/log/nginx/draw.starbase80.dev.access.logs;
+#   error_log /var/log/nginx/draw.starbase80.dev.error.logs;
 
 #   ssl_protocols TLSv1.2 TLSv1.3;
 #   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
@@ -40,8 +40,8 @@ server {
 #   ssl_session_cache shared:SSL:10m;
 #   ssl_session_tickets off;
 
-#   ssl_certificate /etc/letsencrypt/live/drawio.starbase80.dev/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/drawio.starbase80.dev/privkey.pem;
+#   ssl_certificate /etc/letsencrypt/live/draw.starbase80.dev/fullchain.pem;
+#   ssl_certificate_key /etc/letsencrypt/live/draw.starbase80.dev/privkey.pem;
 
 #   include /etc/nginx/snippets/authelia-location.conf;
 
@@ -54,6 +54,6 @@ server {
 #     include /etc/nginx/snippets/proxy.conf;
 #     include /etc/nginx/snippets/authelia-authrequest.conf;
 
-#     proxy_pass http://drawio_backend;
+#     proxy_pass http://draw_backend;
 #   }
 # }
