--- a/homepage/config.json
+++ b/homepage/config.json
@@ -3,12 +3,6 @@
 		"category": "Services",
 		"services": [
 			{
-				"name": "Archivebox",
-				"uri": "https://archivebox.starbase80.dev",
-				"description": "Backup webpages",
-				"icon": "/icons/archivebox.jpg"
-			},
-			{
 				"name": "Authelia",
 				"uri": "https://auth.starbase80.dev",
 				"description": "Authentication",
@@ -19,6 +13,12 @@
 				"uri": "https://calibre.starbase80.dev",
 				"description": "eBook library",
 				"icon": "/icons/calibre.png"
+			},
+			{
+				"name": "Draw.io",
+				"uri": "https://draw.starbase80.dev",
+				"description": "Graphs and charts",
+				"icon": "drawio"
 			},
 			{
 				"name": "Gitea",
@@ -43,12 +43,6 @@
 				"uri": "https://mealie.starbase80.dev",
 				"description": "Recipe manager",
 				"icon": "/icons/mealie.jpg"
-			},
-			{
-				"name": "N8N",
-				"uri": "https://n8n.starbase80.dev",
-				"description": "Workflow automation",
-				"icon": "/icons/n8n.jpg"
 			},
 			{
 				"name": "MeTube",
@@ -91,18 +85,6 @@
 				"uri": "https://standardnotes.starbase80.dev",
 				"description": "Knowledge base",
 				"icon": "/icons/standardnotes.png"
-			},
-			{
-				"name": "Vaultwarden",
-				"uri": "https://vaultwarden.starbase80.dev",
-				"description": "Password manager",
-				"icon": "/icons/vaultwarden.svg"
-			},
-			{
-				"name": "Visual Studio Code",
-				"uri": "https://vscode.starbase80.dev",
-				"description": "Code editor",
-				"icon": "/icons/vscode.jpg"
 			},
 			{
 				"name": "Wallabag",
