--- a/homepage/config.json
+++ b/homepage/config.json
@@ -111,7 +111,7 @@
 			},
 			{
 				"name": "Home Assistant",
-				"uri": "http://192.168.1.4:8123/",
+				"uri": "http://homeassistant.local:8123/",
 				"description": "Home automation",
 				"icon": "/icons/home-assistant.svg"
 			},
